--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,16 @@
  #timers {
  	border-collapse: collapse;
  }
+ #timers button {
+ 	right: 0.75rem;
+    position: absolute;
+    top: 0.375rem;
+ }
 .timer {
 	border: 1px solid #dee2e6;
 	padding: .75rem;
     vertical-align: top;
+    position: relative;
 }
 .timer span i {
 	color: skyblue;
